# bm25-inference

./: .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json  ruff.toml
scripts/: prefetch_models.py
src/bm25_inference/: bm25.py  health.py  main.py  model.py
