[project]
name = "bm25-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Công Trần", email = "trancong12102@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "fastembed>=0.6.0",
    "pydantic>=2.10.6",
]

[project.scripts]
bm25-inference = "bm25_inference:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pyright>=1.1.398", "ruff>=0.11.2"]
